<resources>
    <string name="app_name">TriviaQuest</string>
    <string name="next">Next</string>
    <string name="true_text">True</string>
    <string name="false_text">False</string>
    <string name="correct_answer">Correct! It is</string>
    <string name="incorrect_answer">No.. It is</string>
    <string name="question">Question</string>
    <string name="first_option">First Option</string>
    <string name="second_option">Second Option</string>
    <string name="third_option">Third Option</string>
    <string name="fourth_option">Fourth Option</string>
    <string name="check_answer">Check Answer</string>
    <string name="a">A.</string>
    <string name="b">B.</string>
    <string name="c">C.</string>
    <string name="d">D.</string>
    <string name="submit">Submit</string>
    <string name="trivia_quest">Trivia Quest</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="registration_menu_text">Registration Menu\n\n Please enter a username and password to sign up:</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="categories">Choose a Category</string>
    <string name="geography">Geography</string>
    <string name="literature">Literature</string>
    <string name="go_back">Go Back</string>
    <string name="welcome">Welcome!</string>
    <string name="select_a_category">Select a category</string>
    <string name="ready_to_play">Ready to play?</string>
    <string name="logout">Logout</string>
    <string name="DashboardActivityClassWelcome">"Welcome, "</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="leaderboardButton">Leaderboard</string>
    <string name="just_out_of_the_trivia_oven">Just Out of the Trivia Oven:</string>
    <string name="add_question">Add Question</string>
    <string name="add_category">Add Category</string>
    <string name="edit_questions">Edit Questions</string>
    <string name="admin_menu_n_nwhat_would_you_like_to_do">Admin Menu\n\nWhat would you like to do?</string>
    <string name="edit_categories">Edit Categories</string>
    <string name="admin_page_n_nwhat_would_you_like_to_do">Admin Page\n\nWhat would you like to do?</string>
    <string name="enter_question">Enter Question</string>
    <string name="submit_question">Submit Question</string>
    <string name="answer_4">Answer 4</string>
    <string name="answer_3">Answer 3</string>
    <string name="answer_2">Answer 2</string>
    <string name="answer_1">Answer 1</string>
    <string name="enter_category_name">Enter Category Name</string>
    <string name="submit_category">Submit Category</string>
    <string name="save_changes">Save Changes</string>
    <string name="edit_question">Edit Question</string>
    <string name="edit_category_name">Edit Category Name</string>
    <string name="return_to_home">Return to Home</string>
    <string name="delete_category">Delete Category</string>
    <string name="confirm_delete_category">Confirm Delete Category</string>
    <string name="score_heading">Score</string>
    <string name="user_heading">User</string>
    <string name="our_two_newest_categories">✨ Our two newest categories ✨</string>
    <string name="just_out_of_the_trivia_oven">🥧 Just Out of the Trivia Oven! 🥧</string>
</resources>